Added CSS and docker info

--- a/html/index.html
+++ b/html/index.html
@@ -16,12 +16,6 @@
     >
     <meta name="theme-color" content="#fafafa">
 </head>
-<!--
-    TODO:
-    - Page/section for why not to use other methods. Steam method isn't good
-    - Other page about Contact
-    - About owner in separate page
--->
 <body>
     <!--[if IE]>
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
@@ -35,11 +29,14 @@
     <div id="wrap-hero">
         <section>
             <div class="whitebg">
-                <h2>Professional Carpet Cleaning</h2>
-                <p>
-                    Keeping your carpet looking fresh isn't easy.
-                    Let our professionals do the hard work for you.
-                </p>
+                <h2>Why choose Arns Carpet Cleaning?</h2>
+                <ul>
+                    <li>Locally owned and operated</li>
+                    <li>High quality work</li>
+                    <li>Flexible appointments</li>
+                    <li>Professional and friendly</li>
+                    <li>Great customer service</li>
+                </ul>
             </div>
         </section>
     </div>
