--- a/html/index.html
+++ b/html/index.html
@@ -41,7 +41,48 @@
         </section>
     </div>
     <main>
-        
+        <div class="row">
+            <div class="column mark">
+<!-- Markdown -->
+<h1 id="welcome-to-arns-carpet-cleaning">Welcome to Arns Carpet Cleaning</h1>
+<p>We are a local business with years of experience, proud to serve the community. Our services:</p>
+<h3 id="carpet-cleaning">Carpet Cleaning</h3>
+<p>We use the low moisture bonnet method. It&#39;s been shown to clean as well as steam cleaning and other methods.</p>
+<p>Your carpets will look clean and fresh without high dry times and without damaging the carpet and pad with excessive moisture. We also clean area rugs and carpeted stairs.</p>
+<ul>
+<li><strong>Our method is better than steam cleaning because</strong>: If steam cleaning is done improperly carpets can get irreparably damaged and it doesn&#39;t clean any better despite being more dangerous. Also, steam cleaners run on gasoline and emit green house gasses.</li>
+<li><strong>Our method is better than encapsulation because</strong>: Although it does encapsulate some of the soil, it also encapsulates carpet fibers. This results in your carpet becoming sticky and getting dirty faster.</li>
+<li><strong>Our method is better than shampooing because</strong>: Similar to encapsulation, shampoo leaves carpets susceptible to getting dirtier carpets faster, because it&#39;s not possible to remove all the shampoo. This once again leaves your carpet sticky.</li>
+</ul>
+<h3 id="upholstery-cleaning">Upholstery Cleaning</h3>
+<p>We use a very powerful machine to clean furniture and vehicle upholstery without the use of any harsh chemicals. We also shine up any wood on the furniture to leave it looking beautiful.</p>
+<h2 id="about-our-products">About Our Products</h2>
+<p>The products we use are powerful and yet soap free, odor free, hypo-allergenic, and non-toxic with no VOCs and no off-gassing. Made with all natural ingredients, these cleaning products are a safer cleaning choice. For more info, visit their site at <a href="https://www.carbonatedsolutions.com/">CarbonatedSolutions.com</a></p>
+<ul>
+<li><p>Safer cleaning products</p>
+</li>
+<li><p>Carpets stay cleaner longer</p>
+</li>
+<li><p>No soapy sticky residues</p>
+</li>
+<li><p>No odor</p>
+</li>
+<li><p>Dries faster</p>
+</li>
+</ul>
+<!-- End Markdown -->
+            </div>
+            <div class="column mark">
+<!-- Markdown -->
+<h1 id="contact">Contact</h1>
+<p><strong>Office Hours</strong>: 9am to 9pm, every day</p>
+<p><strong>Cleaning Hours</strong>: Monday to Friday 9am to 6pm*, Saturday 10am to 4pm*</p>
+<p>*After hours cleaning may be available, by request.</p>
+<p>Cleaning carpets in San Jose, Los Gatos, Monte Sereno, Scotts Valley, Capitola, Soquel, Santa Cruz, Saratoga, Campbell, Cupertino, Sunnyvale, Los Altos, Mountain View, Santa Clara &amp; Milpitas!</p>
+<p>Owner: Chris Arns</p>
+<!-- End Markdown -->
+            </div>
+        </div>
     </main>
 
 </body>
